<resources>
    <string name="app_name">Auto Redial</string>
    <string name="title_activity_alert_dialog">AlertDialogActivity</string>
    <string name="title_activity_redial">RedialActivity</string>
    <string name="title_contact_selection">Select Contact</string>
    <string name="message_alert_dialog">To Cancel Redial : Press "CANCEL"</string>
    <string name="message_time_remaining">Time Remaining : 0 Seconds</string>
    <string name="redial_attempt_remaining">Redial Attempt Remaining : 0 </string>
    <string name="redial_message">Redialling...</string>
    <string name="call_detail">Unknown : 9999999999</string>
    <!--<string name="users_note">Note : You must restart this application to activate Auto-Redial after restart of your device</string>-->
    <string name="users_note">Note : After you restart your device , To enable Auto-Redial, Please open this application once.</string>

</resources>
