<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/alertTitle"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/alertTitleSize"
            android:layout_width="match_parent"
            android:layout_height="@dimen/alertTitleViewHeight"
            android:scaleType="center"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/redialMessageView"
            android:text="@string/redial_message"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal|center_vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/callDetailView"
            android:text="@string/call_detail"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal|center_vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/redialAttemptRemainingView"
            android:text="@string/redial_attempt_remaining"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal|center_vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal" />


        <TextView
            android:id="@+id/timeRemainingView"
            android:text="@string/message_time_remaining"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal|center_vertical"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:id="@+id/alertMessage"
            android:text="@string/message_alert_dialog"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textStyle="normal|bold"
            android:gravity="center_vertical|center_horizontal"
            android:textColor="@color/colorAccent"/>

        <Button
            android:text="Cancle"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:id="@+id/cancelButton"
            android:background="@drawable/my_button_bg"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
</LinearLayout>